src/test/deca/context/valid/assign_subtype_class.deca
/*
    Description : Assignation d'une classe déclarée

    Résultat : OK
*/
class A{}

class B extends A{}

class C{
    A p = new B();
}
