src/test/deca/context/invalid/class_extends_class_not_declared.deca
/*
    Description : Classe qui étends une classe n'existant pas

    Résultat : erreur contextuelle (deca:6:0)
*/
class C extends A{}
// @expected_output deca:6:0
